# koopman-category-discovery

./: .gitignore  DMD_Demo.py  DMDfunctions.py  Data_generation_pipeline-Copy1.ipynb  Test DMD.ipynb  Time-Embedding DMD.ipynb  eigenvalues.csv  experiment_results.txt  pyproject.toml
.ipynb_checkpoints/: Create Dynamical Systems-Copy1-checkpoint.ipynb  Data_generation_pipeline-Copy1-checkpoint.ipynb  Data_generation_pipeline-checkpoint.ipynb  KSF Clustering-checkpoint.ipynb  PyDMD Tutorial-checkpoint.ipynb  Time-Embedding DMD-checkpoint.ipynb
experiments/KCM_20250811_192854_d9099761/: params.json
experiments/discovery_run_2d_100_test_run/: discovery_params.json  koopman_params.json
experiments/discovery_run_2d_100_test_run2/: discovery_params.json
scripts/: Create Dynamical Systems-Copy1.ipynb  Create Dynamical Systems.ipynb  Data_generation_pipeline-Copy1.ipynb  FFT_Practice.ipynb  OCD_SMILE.ipynb  OCD_baseline.ipynb  PyDMD Tutorial.ipynb  Time-Embedding DMD.ipynb  analyze_trained_models.ipynb  compare_extractors.ipynb  create_dynamical_systems.ipynb  create_high_dim_systems.ipynb  create_koopman_object.ipynb  create_koopman_object.py  create_latex_tables.py  create_wasserstein_metric.ipynb  heuristic_oscillator_check.ipynb  koopman_spectra_reduction.ipynb  reconstruct_with_dmd.ipynb  report_metrics.ipynb  run_category_discovery.ipynb  run_category_discovery.py  scratch.ipynb  shrink_dataset.ipynb  sparse_dmd_test.ipynb  test_KCM.ipynb  test_PHE.ipynb  test_category_discovery.ipynb  test_classification.ipynb  test_delay_embeddings.ipynb  toy_example.ipynb
(+9 files in other folders)
