[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kcm"
version = "0.1.0"
description = "Koopman Category Model tools"
authors = [{ name = "Daniel B. Peterson", email = "dbpeterson97@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "tqdm>=4.66",
    "plotly>=5.18",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "jupyterlab",
    "pytest",
    "black",
    "pre-commit",
]



[tool.setuptools.packages.find]
where = ["src"]
